--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/img/124.JPG"  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="global.css" rel="stylesheet">
-    <title>Vite + React + TS</title>
+    <title>PacoElMorlaco</title>
   </head>
   <body>
     <div id="root"></div>
